--- a/index.html
+++ b/index.html
@@ -94,6 +94,45 @@
 
             </section>
 
+            <section class="main-content-section">
+
+                <h3>Get in Touch</h3>
+
+                <p>
+                    Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu 
+                    lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.
+                </p>
+
+                <form action="" method="post">
+                    <label for="nome">Nome</label>
+                    <input type="text" id="nome" name="nome">
+
+                    <label for="email">E-mail</label>
+                    <input type="text" id="email" name="email">
+
+                    <label for="mensagem">Digite sua mensagem</label>
+                    <textarea name="mensagem" id="mensagem" cols="30" rows="20"></textarea>
+
+                    <input type="submit" value="Enviar">
+                </form>
+
+                <address>
+                    <p>
+                        <span>Endereço: </span>
+                        1234 Somewhere Rd. Nashville, TN 00000 United States
+                    </p>
+                    <p>
+                        <span>Telefone: </span>
+                        000-000-000
+                    </p>
+                    <p>
+                        <span>E-mail: </span>
+                        email@server.com
+                    </p>
+                </address>
+
+            </section>
+
         </main>
         
         <footer class="main-footer">
