--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Projeto Strata</title>
 
+        <script src="https://kit.fontawesome.com/86195664a9.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/estilo.css">
     </head>
 
@@ -130,6 +131,194 @@
                         email@server.com
                     </p>
                 </address>
+
+            </section>
+
+            <section class="main-content-section">
+
+                <h3>Elements</h3>
+
+                <h4>Text</h4>
+
+                <p>
+                    This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>. This is <sup>superscript</sup> 
+                    text and this is <sub>subscript</sub> text. This is underlined and this is <code>code: for (;;) { ... }</code>. Finally, this is a <a href="#">link</a>.
+                </p>
+
+                <blockquote cite="http://developer.mozilla.org" >
+                    <p>Esta é uma citação tirada da Mozilla Developer Center.</p>
+                </blockquote>
+
+                <p>
+                    According to Mozilla's website, Firefox 1.0 was released in 2004 and became a big success.
+                    <q cite="https://www.mozilla.org/es-US/about/history/details/">
+                        Firefox 1.0 was released in 2004 and became a big success.
+                    </q>
+                </p>
+
+                <h4>Preformatado</h4>
+
+                <pre>
+                    <code>
+                        &lt;script&gt;
+                            alert('oi');
+                        &lt;/script&gt;
+                    </code>
+                </pre>
+
+                <h4>Listas</h4>
+
+                <h5>Não ordenada</h5>
+                <ul>
+                    <li>item 1</li>
+                    <li>item 2</li>
+                    <li>item 3</li>
+                </ul>
+
+                <h5>Ordenada</h5>
+                <ol>
+                    <li>item 1</li>
+                    <li>item 2</li>
+                    <li>item 3</li>
+                </ol>
+
+                <h5>Alternate</h5>
+                <ul class="ul-alternate">
+                    <li>item 1</li>
+                    <li>item 2</li>
+                    <li>item 3</li>
+                </ul>
+
+                <h5>Icons</h5>
+
+                <ul>
+                    <li class="teste"><i class="fab fa-twitter"></i></li>
+                    <li><i class="fa-brands fa-square-facebook"></i></li>                   
+                </ul>
+
+                <h5>Actions</h5>
+
+                <p>
+                    <a href="#" class="button-default" >Default</a>
+                    <a href="#" class="button-default button-default-stroke" >Default</a>
+                </p>
+
+                <p>
+                    <a href="#" class="button-default button-default-small" >Default</a>
+                    <a href="#" class="button-default button-default-small button-default-stroke" >Default</a>
+                </p>
+
+                <p>
+                    <a href="#" class="button-default button-default-full" >Default</a>
+                    <a href="#" class="button-default button-default-full button-default-stroke" >Default</a>
+                </p>
+
+                <p>
+                    <a href="#" class="button-default button-default-full button-default-small" >Default</a>
+                    <a href="#" class="button-default button-default-full button-default-small button-default-stroke" >Default</a>
+                </p>
+
+                <h4>Table</h4>
+                <h5>Default</h5>
+
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Description</th>
+                            <th>Price</th>
+                        </tr>
+                    </thead>
+                    <tfoot>
+                        <tr>
+                            <td colspan="2" ></td>
+                            <td>100.00</td>
+                        </tr>
+                    </tfoot>
+                    <tbody>
+                        <tr>
+                            <td>Item One</td>
+                            <td>Ante turpis integer aliquet porttitor.</td>
+                            <td>29.99</td>
+                        </tr>
+                        <tr>
+                            <td>Item Two</td>
+                            <td>Vis ac commodo adipiscing arcu aliquet.</td>
+                            <td>19.99</td>
+                        </tr>
+                        <tr>
+                            <td>Item Three</td>
+                            <td>Morbi faucibus arcu accumsan lorem.</td>
+                            <td>29.99</td>
+                        </tr>
+                        <tr>
+                            <td>Item Four</td>
+                            <td>Vitae integer tempus condimentum.</td>
+                            <td>19.99</td>
+                        </tr>
+                        <tr>
+                            <td>Item Five</td>
+                            <td>Ante turpis integer aliquet porttitor.</td>
+                            <td>29.99</td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <h5>Buttons</h5>
+
+                <p>
+                    <button href="#" class="button-default" >Default</button>
+                    <button href="#" class="button-default button-default-stroke" >Default</button>
+                </p>
+
+                <p>
+                    <button href="#" class="button-default button-default-small" >Default</button>
+                    <button href="#" class="button-default button-default-small button-default-stroke" >Default</button>
+                </p>
+
+                <p>
+                    <button href="#" class="button-default button-default-full" >Default</button>
+                    <button href="#" class="button-default button-default-full button-default-stroke" >Default</button>
+                </p>
+
+                <p>
+                    <button href="#" class="button-default button-default-full button-default-small" >Default</button>
+                    <button href="#" class="button-default button-default-full button-default-small button-default-stroke" >Default</button>
+                </p>
+
+                <input type="button" class="button-default" value="mandar">
+
+                <h5>Forms</h5>
+
+                <form action="#" method="post">
+                    <label for="nome">Nome</label>
+                    <input type="text" name="nome" id="nome">
+
+                    <label for="email">E-mail</label>
+                    <input type="text" name="email" id="email">
+
+                    <select name="" id="">
+                        <option value="0">Selecione ...</option>
+                        <option value="1">Manufacturing</option>
+                        <option value="2">Shipping</option>
+                        <option value="3">Administration</option>
+                        <option value="4">Human Resources</option>
+                    </select>
+
+                    <label> <input type="radio" value="baixa" name="prioridade" > Baixa Prioridade </label>
+                    <label> <input type="radio" value="media" name="prioridade" > Média Prioridade </label>
+                    <label> <input type="radio" value="alta" name="prioridade" > Alta Prioridade </label>
+
+                    <label><input type="checkbox" name="copy" id="copy" value="1">Envie-me uma cópia</label>
+                    <label><input type="checkbox" name="humano" id="humano" value="2">Sou Humano</label>
+
+                    <label for="msg">Mensagem:</label>
+                    <textarea placeholder="Digite uma mensagem" name="msg" id="msg" cols="40" rows="10"></textarea>
+
+                    <input type="submit" class="button-default" value="Enviar">
+                    <input type="reset" class="button-default-stroke" value="Limpar">
+
+                </form>
 
             </section>
 
