--- a/index.html
+++ b/index.html
@@ -322,6 +322,49 @@
 
             </section>
 
+            <section class="main-content-section"">
+
+                <h3>Imagens</h3>
+
+                <div class="gallery-img">
+                    <img src="imagens/fulls/01.jpg" alt="descrição imagem" >
+                </div>
+
+                <div class="gallery-thumb">
+                    <img src="imagens/thumbs/01.jpg" alt="descrição thumb">
+                    <img src="imagens/thumbs/02.jpg" alt="descrição thumb">
+                    <img src="imagens/thumbs/03.jpg" alt="descrição thumb">
+                    <img src="imagens/thumbs/04.jpg" alt="descrição thumb">
+                    <img src="imagens/thumbs/05.jpg" alt="descrição thumb">
+                    <img src="imagens/thumbs/06.jpg" alt="descrição thumb">
+                </div>
+
+                <h4>Left & Right</h4>
+
+                <p>
+                    <img src="imagens/avatar.jpg" alt="avatar">
+                    Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. 
+                    Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. 
+                    tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. 
+                    Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in 
+                    faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis 
+                    sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing 
+                    accumsan eu faucibus. Integer ac pellentesque praesent.
+                </p>
+
+                <p>
+                    <img src="imagens/avatar.jpg" alt="avatar">
+                    Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. 
+                    Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. 
+                    tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. 
+                    Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in 
+                    faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis 
+                    sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing 
+                    accumsan eu faucibus. Integer ac pellentesque praesent.
+                </p>
+
+            </section>
+
         </main>
         
         <footer class="main-footer">
