inicio css e font

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
     <head>
         <meta charset="UTF-8">
@@ -10,6 +10,10 @@
         <title>Projeto Strata</title>
 
         <script src="https://kit.fontawesome.com/86195664a9.js" crossorigin="anonymous"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/estilo.css">
     </head>
 
@@ -20,7 +24,7 @@
                 <img src="#" alt="foto de apresentação" >
             </a>
             <h1>
-                Trabalhos e groselhas <br> de <strong> Leandro Cesar de Almeida </strong>, <br> um zé ninguém qualquer <br> Retirado de <a href="#">libertabra</a>.
+                Trabalhos e groselhas <br> de <strong> Leandro Cesar de Almeida </strong>, <br> um zé ninguém qualquer <br> Retirado de <a target="_blank" href="www.leandrocesar.com.br">leandrocesar.com.br</a>.
             </h1>
         </header>
 
