--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
 
         <header class="main-header">
             <a href="index.html" class="main-header-link" >
-                <img src="#" alt="foto de apresentação" >
+                <img src="imagens/avatar.jpg" alt="foto de apresentação" >
             </a>
-            <h1>
-                Trabalhos e groselhas <br> de <strong> Leandro Cesar de Almeida </strong>, <br> um zé ninguém qualquer <br> Retirado de <a target="_blank" href="www.leandrocesar.com.br">leandrocesar.com.br</a>.
+            <h1 class="main-header-title">
+                Trabalhos e groselhas <br> de <strong> Leandro Cesar</strong>, <br> um zé ninguém qualquer <br> Retirado de 
+                <a target="_blank" href="www.leandrocesar.com.br" class="main-header-link" >barril</a>.
             </h1>
         </header>
 
