--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </a>
             <h1 class="main-header-title">
                 Trabalhos e groselhas <br> de <strong> Leandro Cesar</strong>, <br> um zé ninguém qualquer <br> Retirado de 
-                <a target="_blank" href="www.leandrocesar.com.br" class="main-header-link" >barril</a>.
+                <a target="_blank" href="https://pt.wikipedia.org/wiki/N%C3%A1rnia" class="main-header-link" >Nárnia</a>.
             </h1>
         </header>
 
@@ -149,6 +149,13 @@
                     This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>. This is <sup>superscript</sup> 
                     text and this is <sub>subscript</sub> text. This is underlined and this is <code>code: for (;;) { ... }</code>. Finally, this is a <a href="#">link</a>.
                 </p>
+
+                <h1>titulo h1</h1>
+                <h2>titulo h2</h2>
+                <h3>titulo h3</h3>
+                <h4>titulo h4</h4>
+                <h5>titulo h5</h5>
+                <h6>titulo h6</h6>
 
                 <blockquote cite="http://developer.mozilla.org" >
                     <p>Esta é uma citação tirada da Mozilla Developer Center.</p>
